--- a/railway.toml
+++ b/railway.toml
@@ -3,11 +3,9 @@ builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "python manage.py migrate && python manage.py runserver 0.0.0.0:$PORT"
+startCommand = "python manage.py migrate && gunicorn ehcl.wsgi:application --bind 0.0.0.0:$PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 100
-restartPolicyType = "on-failure"
-restartPolicyMaxRetries = 10
 
 [service]
 name = "django-backend"
