--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,9 @@
 [deploy]
+buildCommand = "python3 -m pip install --upgrade pip && python3 -m pip install -r requirements.txt"
 startCommand = "python manage.py migrate && gunicorn ehcl.wsgi:application --bind 0.0.0.0:$PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 
 [service]
 name = "django-backend"
-type = "web" 
+type = "web"
