--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,7 @@
     "@types/react-native": "~0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-web": "^0.19.1",
-    "typescript": "~5.8.3"
+    "typescript": "^4.9.5"
   },
   "private": true
 }
