--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build": "react-scripts build"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/config-plugins": "~10.0.0",
@@ -55,7 +54,7 @@
     "@types/react-native": "~0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-web": "^0.19.1",
-    "typescript": "^4.9.5"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
