--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "EHCL",
-    "slug": "ehcl",
+    "name": "Emergency Health Center Locator",
+    "slug": "emergency-health-center-locator",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -12,7 +12,10 @@
     },
     "scheme": "ehcl",
     "extra": {
-      "apiUrl": "http://10.10.162.84:8000/api"
+      "apiUrl": "https://ehcl-production.up.railway.app/api",
+      "eas": {
+        "projectId": "aa00d066-7bdd-4dcf-8221-998d2a4773f0"
+      }
     },
     "updates": {
       "url": "https://u.expo.dev/your-project-id"
