add package name to Android configuration in app.json

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -36,7 +36,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.munduni.emergencyhealthcenterlocator"
     },
     "web": {
       "favicon": "./assets/favicon.png",
