--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [deploy]
-# startCommand = "python manage.py migrate && gunicorn myproject.wsgi:application --bind 0.0.0.0:$PORT"
-startCommand = "python manage.py migrate && python manage.py loaddata data.json && gunicorn myproject.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "python manage.py migrate && gunicorn myproject.wsgi:application --bind 0.0.0.0:$PORT"
+#startCommand = "python manage.py migrate && python manage.py loaddata data.json && gunicorn myproject.wsgi:application --bind 0.0.0.0:$PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 
