--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "@expo/config-plugins": "~10.0.0",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
@@ -23,7 +24,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
-    "expo-audio": "^0.4.6",
+    "expo-av": "~15.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-image-picker": "~16.1.4",
     "expo-location": "^18.1.5",
@@ -49,6 +50,7 @@
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "~0.72.8",
