--- a/frontend/app.json
+++ b/frontend/app.json
@@ -12,10 +12,7 @@
     },
     "scheme": "ehcl",
     "extra": {
-      "apiUrl": "https://ehcl-production.up.railway.app",
-      "eas": {
-        "projectId": "24962302-83ae-4aab-adae-38a3e2294643"
-      }
+      "apiUrl": "http://192.168.91.156:8000/api"
     },
     "updates": {
       "url": "https://u.expo.dev/your-project-id"
