--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.9",
@@ -37,6 +38,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-date-picker": "^5.0.12",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -47,12 +49,14 @@
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
+    "react-native-wheel-picker-expo": "^0.5.4",
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "~0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-web": "^0.19.1",
     "typescript": "~5.8.3"
