--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@tanstack/react-query": "^5.76.1",
+    "axios": "^1.10.0",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-vector-icons": "^10.2.0"
