--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ django-cloudinary-storage==0.3.0
 Pillow==10.0.1
 django-debug-toolbar==4.2.0
 drf-spectacular==0.26.5
+gunicorn==21.2.0
+whitenoise==6.5.0
+
+# PostgreSQL adapter - will be installed on Railway automatically
+# psycopg2-binary==2.9.7  # Uncomment for local PostgreSQL testing
