Update API URLs to use production backend for consistency across the application
- Changed API URLs in `app.config.ts`, `app.json`, and `config.ts` to point to the production backend at `https://web-production-52fc7.up.railway.app`.
- Updated `dynamicConfig.ts` to ensure production mode uses the deployed backend and caches the API URL.
- Modified `UploadImageScreen.tsx`, `test-api.js`, and `test-endpoints.ts` to utilize the new production API URL.
- Enhanced `NetworkManager.ts` and `networkDiscovery.ts` to streamline server discovery and ensure production compatibility.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -12,7 +12,7 @@
     },
     "scheme": "ehcl",
     "extra": {
-      "apiUrl": "http://192.168.91.156:8000/api"
+      "apiUrl": "https://web-production-52fc7.up.railway.app/api"
     },
     "updates": {
       "url": "https://u.expo.dev/your-project-id"
