Update Procfile to use start script and uncomment psycopg2-binary in requirements.txt for local PostgreSQL testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ gunicorn==21.2.0
 whitenoise==6.5.0
 
 # PostgreSQL adapter - will be installed on Railway automatically
-# psycopg2-binary==2.9.7  # Uncomment for local PostgreSQL testing
+psycopg2-binary==2.9.7  # Uncomment for local PostgreSQL testing
