Remove deprecated deployment files and scripts
- Deleted `DEPLOYMENT_CHECKLIST.md`, `RAILWAY_DEPLOYMENT.md`, `railway.json`, and `Procfile` as they are no longer needed for the current deployment process.
- Removed `export_sqlite_data.py`, `generate_secret_key.py`, and `migrate_to_postgresql.py` scripts to streamline the project and eliminate unused functionality.
- Updated `manage.py`, `asgi.py`, and `wsgi.py` to remove references to the Railway-specific settings, ensuring a cleaner configuration for production environments.
- Adjusted `requirements.txt` to reflect the removal of unnecessary dependencies.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -12,7 +12,7 @@
     },
     "scheme": "ehcl",
     "extra": {
-      "apiUrl": "https://web-production-52fc7.up.railway.app/api"
+      "apiUrl": "http://localhost:8000/api"
     },
     "updates": {
       "url": "https://u.expo.dev/your-project-id"
